# caffe_cat_dog

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  caffe.prototxt  cat.txt  cmake_install.cmake  dog.txt  hist_eq.cpp  predict  predict.cpp  solver.prototxt  train.txt  val.txt
input/: mean.binaryproto
test_lmdb/: data.mdb  lock.mdb
